--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Resume" content
     <title><h1>My Resume</h1></title>
     <link rel="stylesheet" href="style.css">
-    <img src="https://github.com/Gavazash/Gavaza-Shikwambana-Resume/blob/main/My%20pic.jpg" alt="My Picture" height="200">
+    <img src="./My pic.jpg" alt="My Picture" height="200">
 </head>
 <body>
     <h2>Summary</h2>
